--- a/index.html
+++ b/index.html
@@ -1,43 +1,150 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ejercicio de maquetación</title>
-    <link rel="stylesheet" href="css/estilos.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css/estilos.css" />
+  </head>
+  <body>
     <!--.container>section*5>h2{Ejercicio $}-->
     <div class="container">
-        <section class="ejercicio1">
-            <h2>Ejercicio 1</h2>
-            <div class="card1">
-                <img src="img/img_card1.png" alt="">
-                <div class="datos_carga">
-                    <p>69%</p>
-                    <p>44GB of 66GB UPLOADED</p>
-                </div>
-                <ul class="lista_archivos">
-                    <li>game_settings.cfg</li>
-                    <li>savegame_slot_3.sav</li>
-                    <li>level_mapdata.bin</li>
-                </ul>
-                <button>CANCEL</button>
+      <section class="ejercicio1">
+        <h2>Ejercicio 1</h2>
+        <div class="card1">
+          <img src="img/img_card1.png" alt="" />
+          <div class="datos_carga">
+            <p>69%</p>
+            <p>44GB of 66GB UPLOADED</p>
+          </div>
+          <ul class="lista_archivos">
+            <li>game_settings.cfg</li>
+            <li>savegame_slot_3.sav</li>
+            <li>level_mapdata.bin</li>
+          </ul>
+          <a href="
+          ">CANCEL</a>
+        </div>
+      </section>
+      <section class="ejercicio2">
+        <h2>Ejercicio 2</h2>
+        <div class="card2">
+          <ul class="pantalla_1">
+            <li>
+              <img src="/img/img_card2.png" alt="">
+              <div class="text">
+                <p>Beautiful Nature</p>
+                <p>Nature, in the broadest sense, is the natural, physical, or
+                  material world or universe. The study of nature is a large part of
+                  science.</p>
+              </div>
+              <a href="">Know more</a>
+            </li>
+          </ul>
+          <ul class="bulltets">
+            <li ><button class="activo">1</button></li>
+            <li ><button>2</button></li>
+            <li ><button>3</button></li>
+          </ul>
             </div>
-        </section>
-        <section>
-            <h2>Ejercicio 2</h2>
-        </section>
-        <section>
-            <h2>Ejercicio 3</h2>
-        </section>
-        <section>
-            <h2>Ejercicio 4</h2>
-        </section>
-        <section>
-            <h2>Ejercicio 5</h2>
-        </section>
+      </section>
+
+      <section class="ejercicio3">
+        <h2>Ejercicio 3</h2>
+        <div class="card3">
+          <div class="contenido_main">
+            <img src="/img/img_card3.png" alt="">
+            <div class="text">
+              <p>SAVINGS ACCOUNT</p>
+              <p>Brilliant to keep your money locked away, let the interest build you up, finally get to go on that holiday of your dreams!</p>
+            </div>
+          </div>
+          <a href="">Start today!</a>
+        </div>
+      </section>
+      <section class="ejercicio4">
+        <h2>Ejercicio 4</h2>
+        <div class="card4">
+          <div class="contenido">
+            <div class="texto_header">
+              <p>House</p>
+              <p>Discover House, where architecture is a
+                journey of creation. Crafting homes that tell stories woven into the world around us.
+                Building the foundation for your vision.</p>
+              <p>Menu</p>
+            </div>
+            <div class="texto_middle">
+              <p>(01)</p>
+              <p>&copy2024</p>
+            </div>
+            <div class="texto_imagen">
+              <img src="/img/img_card4.png" alt="">
+              <p>NEST</p>
+            </div>
+            <div></div>
+          </div>
+        </div>
+      </section>
+      <section class="ejercicio5">
+        <h2>Ejercicio 5</h2>
+        <div class="card5">
+          <div class="header">
+            <a href="">boards</a>
+            <div class="user">
+              <p>James</p>
+              <img src="/img/user_img.png" alt="">
+            </div>
+          </div>
+          <div class="contenido">
+            <div class="datos">
+              <p class="title">James Whitemore</p>
+              <div class="subtitulo">
+                <p>10 boards</p>
+                <p>Creative Buzz</p>
+              </div>
+            </div>
+            <div class="content">
+              <p>Your boards</p>
+              <ul>
+                <li>
+                  <img src="/img/image 0.png" alt="">
+                  <p>Create New Board</p>
+                </li>
+                <li>
+                  <img src="/img/image 1.png" alt="">
+                  <p>Forest</p>
+                </li>
+              </ul>
+              <ul>
+                <li>
+                  <img src="/img/image 2.png" alt="">
+                  <p>Smoth Brew</p>
+                </li>
+                <li>
+                  <img src="/img/image 3.png" alt="">
+                  <p>Jockson Porter</p>
+                </li>
+              </ul>
+              <!--<div class="tarjeta">
+                <img src="/img/image 0.png" alt="">
+                <p>Create New Board</p>
+              </div>
+              <div class="tarjeta">
+                <img src="/img/image 1.png" alt="">
+                <p>Forest</p>
+              </div>
+              <div class="tarjeta">
+                <img src="/img/image 2.png" alt="">
+                <p>Smoth Brew</p>
+              </div>
+              <div class="tarjeta">
+                <img src="/img/image 3.png" alt="">
+                <p>Jockson Porter</p>-->
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
-    
-</body>
+  </body>
 </html>
