--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ejercicio de maquetación</title>
+    <title>Ejercicios de maquetación</title>
     <link rel="stylesheet" href="css/estilos.css" />
   </head>
   <body>
@@ -12,7 +12,7 @@
       <section class="ejercicio1">
         <h2>Ejercicio 1</h2>
         <div class="card1">
-          <img src="img/img_card1.png" alt="" />
+          <img src="img/img_card1.png" alt="Imagen de laptop" />
           <div class="datos_carga">
             <p>69%</p>
             <p>44GB of 66GB UPLOADED</p>
@@ -31,7 +31,7 @@
         <div class="card2">
           <ul class="pantalla_1">
             <li>
-              <img src="/img/img_card2.png" alt="">
+              <img src="img/img_card2.png" alt="Imagen de playa">
               <div class="text">
                 <p>Beautiful Nature</p>
                 <p>Nature, in the broadest sense, is the natural, physical, or
@@ -53,7 +53,7 @@
         <h2>Ejercicio 3</h2>
         <div class="card3">
           <div class="contenido_main">
-            <img src="/img/img_card3.png" alt="">
+            <img src="img/img_card3.png" alt="Imagen de alcancía de cerdo">
             <div class="text">
               <p>SAVINGS ACCOUNT</p>
               <p>Brilliant to keep your money locked away, let the interest build you up, finally get to go on that holiday of your dreams!</p>
@@ -78,7 +78,7 @@
               <p>&copy2024</p>
             </div>
             <div class="texto_imagen">
-              <img src="/img/img_card4.png" alt="">
+              <img src="img/img_card4.png" alt="Imagen detalle de arquitectura">
               <p>NEST</p>
             </div>
             <div></div>
@@ -92,7 +92,7 @@
             <a href="">boards</a>
             <div class="user">
               <p>James</p>
-              <img src="/img/user_img.png" alt="">
+              <img src="img/user_img.png" alt="Icono de usuario">
             </div>
           </div>
           <div class="contenido">
@@ -107,21 +107,21 @@
               <p>Your boards</p>
               <ul>
                 <li>
-                  <img src="/img/image 0.png" alt="">
+                  <img src="img/image_0.png" alt="Agregar más">
                   <p>Create New Board</p>
                 </li>
                 <li>
-                  <img src="/img/image 1.png" alt="">
+                  <img src="img/image_1.png" alt="Imagen de bosque">
                   <p>Forest</p>
                 </li>
               </ul>
               <ul>
                 <li>
-                  <img src="/img/image 2.png" alt="">
+                  <img src="img/image_2.png" alt="Imagen de taza de café">
                   <p>Smoth Brew</p>
                 </li>
                 <li>
-                  <img src="/img/image 3.png" alt="">
+                  <img src="img/image_3.png" alt="Imagen de una ventana">
                   <p>Jockson Porter</p>
                 </li>
               </ul>
