--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ejercicios de maquetación</title>
     <link rel="stylesheet" href="css/estilos.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,500&display=swap" rel="stylesheet">
   </head>
   <body>
-    <!--.container>section*5>h2{Ejercicio $}-->
+    
     <div class="container">
+      <div class="back-button">
+      <a href="../practicas/practicas.html"><svg class="svg-icon" style="width: 25px; height: 25px;vertical-align: middle;fill: currentColor;overflow: hidden;" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M608 736c-6.4 0-19.2 0-25.6-6.4l-192-192C384 524.8 384 499.2 390.4 486.4l192-192c12.8-12.8 32-12.8 44.8 0s12.8 32 0 44.8L460.8 512l166.4 166.4c12.8 12.8 12.8 32 0 44.8C627.2 736 614.4 736 608 736z"  /></svg>
+      Volver</a>
+      </div>
       <section class="ejercicio1">
         <h2>Ejercicio 1</h2>
         <div class="card1">
